# gam_utilities

./: .gitignore  CLAUDE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  add_secu_details.py  add_table_mappings.py  application-config.json  config.yml  failed_asset_records.json  get_secu_ops.py  investments.py  requirements.txt  searchapi.py  secu_values.py  smoke_test.sh  smoke_test_simple.sh  submit_config.py  testapi.py  validate_registry.py
docs/: 02-ucm-design-v2.docx  BASIC_FORMS_GUIDE.md  METADATA_MANUAL.md  metadata-overview.docx
form_tasks/: MigrationCenter_FormSpecs.md
investment_system/: assets.py  customers.py  positions.py  transactions.py
joget-dx-toolkit/: QUICKSTART.md  README.md  TESTING_STRATEGY.md  TEST_RESULTS.md  migration_center.yaml  pyproject.toml  test_migration_center.yaml
joget-dx-toolkit/examples/: migration_center.yaml
joget-dx-toolkit/joget_dx_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
joget-dx-toolkit/joget_toolkit/: __init__.py
joget-dx-toolkit/joget_toolkit/builders/: __init__.py  base.py  joget.py
joget-dx-toolkit/joget_toolkit/cli/: __init__.py  main.py
joget-dx-toolkit/joget_toolkit/deployers/: __init__.py  base.py  joget.py
joget-dx-toolkit/joget_toolkit/parsers/: __init__.py  base.py  csv.py  markdown.py  yaml.py
joget-dx-toolkit/joget_toolkit/specs/: __init__.py  schema.py  validator.py
joget-dx-toolkit/joget_toolkit/validators/: __init__.py
joget-dx-toolkit/migration_center_forms/: component_registry.json  deployment_history.json  deployment_jobs.json  prerequisite_validation.json
joget_services/: add_table_properties.py  database_mapper.py  form_parser.py  form_structure.yaml  form_to_db_mapping_template.json  joget_field_mapper.py  requirements.txt  validate_form_structure_db.py  validation_report.json  validation_report.md
joget_utility/: utils.py  (+18 more)
(+142 files in other folders)
