[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joget-dx-toolkit"
version = "0.1.0"
description = "Developer toolkit for Joget DX platform - form generation, deployment, and management"
authors = [
    {name = "Development Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["joget", "dx", "form-builder", "workflow", "bpm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
joget-dx = "joget_toolkit.cli.main:cli"
jdx = "joget_toolkit.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/joget-dx-toolkit"
Documentation = "https://github.com/yourusername/joget-dx-toolkit#readme"
Repository = "https://github.com/yourusername/joget-dx-toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["joget_toolkit*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
